--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#properties ≈‰÷√ Ù–‘ª·∏≤∏« yml
 server.port=8080
 server.contextPath=/springbootdemo
 spring.application.name=springbootdemo
+#spring.profiles.active=dev
+#spring.profiles.include=proddb,prodmq
